err/ropper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/capstone'...
Listing './lib/python3.5/site-packages/capstone-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/filebytes'...
Listing './lib/python3.5/site-packages/filebytes-0.9.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ropper'...
Listing './lib/python3.5/site-packages/ropper/common'...
Listing './lib/python3.5/site-packages/ropper/loaders'...
Compiling './lib/python3.5/site-packages/ropper/parser.py'...
***   File "./lib/python3.5/site-packages/ropper/parser.py", line 41
    
    ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/ropper/printer'...
Listing './lib/python3.5/site-packages/ropper/ropchain'...
Listing './lib/python3.5/site-packages/ropper/ropchain/arch'...
Listing './lib/python3.5/site-packages/ropper-1.11.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
